--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
   <link rel="canonical" href="https://domspitzen-event-catering.de" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 
 <body>
